--- a/stories/ja/0110_小さな種：ワンガリ・マータイの物語_slides.html
+++ b/stories/ja/0110_小さな種：ワンガリ・マータイの物語_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>کالای با گیاهان صحبت می کند - Global African Storybook</title>
+  <title>小さな種：ワンガリ・マータイの物語 - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="کالای-با-گیاهان-صحبت-می-کند" class="slide level1">
-<h1 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl">کالای با گیاهان صحبت می کند</h1>
+<section id="小さな種ワンガリマータイの物語" class="slide level1">
+<h1>小さな種：ワンガリ・マータイの物語</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
-<p dir="rtl">این کالای است. او هفت سال سن دارد. در زبان لوباکوسو که زبان او می باشد معنای اسمش - دختر خوب – است.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/02.jpg" /></p>
+<p>アフリカの東の方にあるケニヤ山のあたりに村があります。そこでお母さんと畑仕事をしている女の子がいました。女の子はワンガリといいます。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
-<p dir="rtl">کالای هر روز صبح که بیدار می شود با درخت پرتقال صحبت می کند. درخت پرتقال لطفا، حسابی رشد کن و به ما پرتقال های رسیده ی خوب بده.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/03.jpg" /></p>
+<p>ワンガリは、外で遊ぶのが大好きでした。ワンガリは、おうちの野菜畑に、マチェテを使って土を柔らかくします、暖かい土壌に小さな種を植えました。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
-<p dir="rtl">کالای تا مدرسه راه می رود. در راه با علف ها صحبت می کند. علف ها، لطفا بیشتر رشد کنید و سبز شوید و خشک نشوید.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/04.jpg" /></p>
+<p>ワンガリは、一日の中で夕焼け後の時間が一番大好きでした。暗くなって、畑の野菜が見えなくなるとワンガリはおうちに帰るのです。畑に沿って狭い小道をたどり、いくつか川を横切り家路につくのでした。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
-<p dir="rtl">کالای از کنار گل های وحشی رد می شود. گلهای وحشی لطفا، مرتب شکوفه بزنید که من بتوانم شما را در موهایم قرار دهم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/05.jpg" /></p>
+<p>ワンガリは頭が良かったので、早く学校に行きたくて仕方ありませんでした。しかし、ワンガリのお父さんとお母さんはワンガリに学校に行かせたくありませんでした。ワンガリに、もっとおうちの手伝いをして欲しかったからです。しかし、ワンガリが７歳になった頃、ワンガリのお兄さんがお父さんとお母さんに、ワンガリが学校に行けるよう一生懸命頼んでくれたので、ついにワンガリは学校に行けることになったのです。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
-<p dir="rtl">در مدرسه، کالای با درختی که در وسط حیاط بود صحبت کرد.&quot; درخت لطفا، شاخه های بزرگ برویان تا ما بتوانیم زیر سایه‌ی تو درس بخوانیم.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/06.jpg" /></p>
+<p>ワンガリは勉強をするのが大好きでした！ワンガリはたくさんたくさん本を読んで勉強しました。学校で良い成績をおさめていたワンガリは、アメリカの大学に行けることになりました。ワンガリはとても喜びました！もっとたくさん世界のことについて学べるからです。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
-<p dir="rtl">کالای با حصار اطراف مدرسه صحبت می کند. &quot;لطفا محکم و قوی رشد کن و جلوی وارد شدن افراد بد را بگیر.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/07.jpg" /></p>
+<p>アメリカの大学でワンガリは知らなかったことをたくさん学びました。植物や植物の育て方も学びました。これらの勉強はケニヤのきれいな森にある木々の陰でお兄ちゃんと遊んだワンガリの幼少期の記憶をよみがえらせました。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
-<p dir="rtl">وقتی کالای از مدرسه به خانه برگشت، درخت پرتقال را دید. کالای پرسید، &quot;آیا پرتقال هایت هنوز نرسیده ؟&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/08.jpg" /></p>
+<p>アメリカの大学でたくさん勉強しているうちに、ワンガリはケニアの人たちが恋しくなりました。ワンガリは、大好きなケニアの人たちを幸せに、自由にしてあげたいと思うようになりました。たくさん勉強すればするほど、アフリカにある自分の家のことを思い出しました。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
-<p dir="rtl">کالای آهی کشید وگفت، &quot;پرتقال ها هنوز سبز هستند.&quot; کالای گفت، &quot;فردا تو را خواهم دید درخت پرتقال.&quot; &quot;شاید بعد تویک پرتقال رسیده برای من داشته باشی!&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/09.jpg" /></p>
+<p>大学での勉強を終わると、ワンガリはケニアに戻って来ました。しかし故郷の環境は大きく変わっていました。巨大な農場があたり一面に広がり、女性たちは火をおこすための木さえ手に入れることが出来ず、人々は貧しく子供たちはおなかをすかせていました。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,17 +168,53 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" id="کالای-با-گیاهان-صحبت-می-کند-1">کالای با گیاهان صحبت می کند</h2>
-<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Jesse Pietersen<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/10.jpg" /></p>
+<p>ワンガリはどうすればよいのかを知っていました。女性たちに種から木を育てる方法を教え、彼女たちは木を売り家族を養うお金を稼ぐことができました。みんながとても喜びました。ワンガリは人々が強くなれるよう、手助けをしました。</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/11.jpg" /></p>
+<p>時が過ぎて、種が木になり、新しい木が森に育ち、川の水が再び流れ始めました。ワンガリの教えはアフリカ中に広まり、今日では何百万もの木々がワンガリの種から育ちました。</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/12.jpg" /></p>
+<p>ワンガリは一生懸命働きました。世界中の人々が彼女に注目しました、有名な賞をあげました。それは、ノーベル平和賞という賞です。ワンガリは、アフリカの女性で初めてノーベル賞をもらうことができたのです。</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/13.jpg" /></p>
+<p>ワンガリは、２０１１年に亡くなりました。しかし、美しい木々を見て、今でもワンガリのことを思い出しています。</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="小さな種ワンガリマータイの物語-1">小さな種：ワンガリ・マータイの物語</h2>
+<strong>作:</strong> Nicola Rijsdijk<br> <strong>絵:</strong> Maya Marshak<br> <strong>訳:</strong> Kei Fukumoto, Konomi Nakagawa, Sayaka Yamamoto, Saari Yoshida<br> <strong>言語:</strong> 日本語<br>
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/khalai-talks-plants'>here</a>
-<p dir="rtl"><div class="license">
+<p>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/tiny-seed-story-wangari-maathai'>here</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
