--- a/stories/ja/0139_体の中のワニ_slides.html
+++ b/stories/ja/0139_体の中のワニ_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>کالای با گیاهان صحبت می کند - Global African Storybook</title>
+  <title>体の中のワニ - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="کالای-با-گیاهان-صحبت-می-کند" class="slide level1">
-<h1 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl">کالای با گیاهان صحبت می کند</h1>
+<section id="体の中のワニ" class="slide level1">
+<h1>体の中のワニ</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0139/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
-<p dir="rtl">این کالای است. او هفت سال سن دارد. در زبان لوباکوسو که زبان او می باشد معنای اسمش - دختر خوب – است.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0139/02.jpg" /></p>
+<p>はじめまして、私の名前は、「ントンビ」よ。あることを除いて、他の女の子と変わりらないわ…実は、体の中にワニがいるの。誰もこのワニを見れないけれど、私は、このワニがいることを感じ取れるわ。彼の名前は、「<strong>エイ</strong>リアン<strong>ズ</strong>」よ。彼は、体の中に隠れてて、友達には害はないわ。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
-<p dir="rtl">کالای هر روز صبح که بیدار می شود با درخت پرتقال صحبت می کند. درخت پرتقال لطفا، حسابی رشد کن و به ما پرتقال های رسیده ی خوب بده.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0139/03.jpg" /></p>
+<p>彼は、体から出てこないし、誰かが私の隣に座っても、手を握っても、その人に噛みつくことは無いわ。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
-<p dir="rtl">کالای تا مدرسه راه می رود. در راه با علف ها صحبت می کند. علف ها، لطفا بیشتر رشد کنید و سبز شوید و خشک نشوید.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0139/04.jpg" /></p>
+<p>彼は、体から出てこないし、誰かが私のランチを食べても、私が休んでいるとき床に一緒に寝ても、その人に噛みつくことは無いわ。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
-<p dir="rtl">کالای از کنار گل های وحشی رد می شود. گلهای وحشی لطفا، مرتب شکوفه بزنید که من بتوانم شما را در موهایم قرار دهم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0139/05.jpg" /></p>
+<p>彼は、生まれた時から体の中にいるわ。そして、彼は、体の中にいて、細菌と闘い、病気から私を守ってくれる兵隊さんに噛みつくのが好きだわ。 彼が、よく兵隊さんに噛みつくとき、私は病気がちになってしまって、学校にも行けないし、友達とも遊べなくなるわ。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
-<p dir="rtl">در مدرسه، کالای با درختی که در وسط حیاط بود صحبت کرد.&quot; درخت لطفا، شاخه های بزرگ برویان تا ما بتوانیم زیر سایه‌ی تو درس بخوانیم.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0139/06.jpg" /></p>
+<p>私は、決められた時間に毎日、薬を飲まなければならないわ。もし飲まなかったら、機嫌悪く起きだして体の中の兵隊さんをまた食べだすの。私は、それが嫌だから、おばあちゃんにちょうど時間通りにその特別な薬を渡してもらうようにしているの。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
-<p dir="rtl">کالای با حصار اطراف مدرسه صحبت می کند. &quot;لطفا محکم و قوی رشد کن و جلوی وارد شدن افراد بد را بگیر.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0139/07.jpg" /></p>
+<p>野菜やフルーツなどの健康に良いものを食べると、体の中にいる兵隊さんは、強くなって、噛みつかれることもなくなるわ。きっと彼はしばらくのあいだ眠るから私はまた友だちとあそべるのよ。私はそんな時間がすごくしあわせだわ。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
-<p dir="rtl">وقتی کالای از مدرسه به خانه برگشت، درخت پرتقال را دید. کالای پرسید، &quot;آیا پرتقال هایت هنوز نرسیده ؟&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0139/08.jpg" /></p>
+<p>さっき、おばあちゃんが私をお医者さんのところにつれて行ってくれて、彼を眠らせる餌を買って来たわ。それは、彼をねむりにつかせて、私の兵士を食べちゃわないようにするの。そして、私は、他の子と同じように走ったり、登ったり、ダンスしたりして楽しむことができるの。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
-<p dir="rtl">کالای آهی کشید وگفت، &quot;پرتقال ها هنوز سبز هستند.&quot; کالای گفت، &quot;فردا تو را خواهم دید درخت پرتقال.&quot; &quot;شاید بعد تویک پرتقال رسیده برای من داشته باشی!&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0139/09.jpg" /></p>
+<p>私はおばあちゃんが本当に好きだわ。すごく優しくて兵隊さんをつよくするような健康な食べ物をつくってくれるの。それでももし気分がわるくなったらすぐにお医者さんのところに連れて行ってくれて、薬をもらえるから気分がよくなるのよ。私はねるまえにおばあちゃんの膝の上に座って物語を聞かせてくれるのが好きなの。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,17 +168,44 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" id="کالای-با-گیاهان-صحبت-می-کند-1">کالای با گیاهان صحبت می کند</h2>
-<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Jesse Pietersen<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0139/10.jpg" /></p>
+<p>おばあちゃんが、私をベッドに行かせた後、私はいろいろなことを考えるわ。例えば、大きな学校の講義で、色々なことを学んだり、もしあの特別な薬を飲み続けるならば、おばあちゃんが年をとって、あまり目がみえなくなってきたら、彼女の世話をして、物語を聞かせるわ。大人になったら色々なことを学びたいなぁ。他の人たちの体の中にいるワニを永遠に寝かせる薬を見つける手助けをしたいわ。</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0139/11.jpg" /></p>
+<p>私は、「<strong>エイ</strong>リアン<strong>ズ</strong>」との生き方を学んで、彼をできる限り寝かせるわ。私はできるだけ多くの友だちをつくって毎日できるだけたのしむの。</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0139/12.jpg" /></p>
+<p>おばあちゃん、叔母や叔父、そして友達は、「<strong>エイ</strong>リアン<strong>ズ</strong>」というワニを体の中に飼ってるけど、私をとても可愛がってくれるわ。</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="体の中のワニ-1">体の中のワニ</h2>
+<strong>作:</strong> Val Morris<br> <strong>絵:</strong> Felicity Bell<br> <strong>訳:</strong> Kaise Hoshika, Rina Fukui, Daichi Ota, Naru Seto<br> <strong>言語:</strong> 日本語<br>
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/khalai-talks-plants'>here</a>
-<p dir="rtl"><div class="license">
+<p>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/crocodile-my-body'>here</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
