--- a/stories/ja/0201_ロバの子_slides.html
+++ b/stories/ja/0201_ロバの子_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>کالای با گیاهان صحبت می کند - Global African Storybook</title>
+  <title>ロバの子 - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="کالای-با-گیاهان-صحبت-می-کند" class="slide level1">
-<h1 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl">کالای با گیاهان صحبت می کند</h1>
+<section id="ロバの子" class="slide level1">
+<h1>ロバの子</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
-<p dir="rtl">این کالای است. او هفت سال سن دارد. در زبان لوباکوسو که زبان او می باشد معنای اسمش - دختر خوب – است.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/02.jpg" /></p>
+<p>ある時のことです。小さい女の子が遠くのほうに不思議な形をしたものをみつけました。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
-<p dir="rtl">کالای هر روز صبح که بیدار می شود با درخت پرتقال صحبت می کند. درخت پرتقال لطفا، حسابی رشد کن و به ما پرتقال های رسیده ی خوب بده.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/03.jpg" /></p>
+<p>その形が女の子に近づいてきたとき、女の子はその形がお腹にあかちゃんがいる女の人だといることに気が付きました。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
-<p dir="rtl">کالای تا مدرسه راه می رود. در راه با علف ها صحبت می کند. علف ها، لطفا بیشتر رشد کنید و سبز شوید و خشک نشوید.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/04.jpg" /></p>
+<p>その女の子は恥ずかしがりやでしたが、勇気を出してその女の人に近づきました。女の子や女の子の家族たちは、その妊婦さんを安全に守ることに決めました。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,9 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
-<p dir="rtl">کالای از کنار گل های وحشی رد می شود. گلهای وحشی لطفا، مرتب شکوفه بزنید که من بتوانم شما را در موهایم قرار دهم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/05.jpg" /></p>
+<p>赤ちゃんはすぐに生まれそうです。</p>
+<p>みんなが彼女を助けました。「押すんだ！」「毛布をもってきて！」「水をちょうだい！」「押してーーー！！！」</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +133,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
-<p dir="rtl">در مدرسه، کالای با درختی که در وسط حیاط بود صحبت کرد.&quot; درخت لطفا، شاخه های بزرگ برویان تا ما بتوانیم زیر سایه‌ی تو درس بخوانیم.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/06.jpg" /></p>
+<p>しかし、赤ちゃんが出てきたとき、彼らは驚き飛び跳ねました。「ロバ？！」</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +142,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
-<p dir="rtl">کالای با حصار اطراف مدرسه صحبت می کند. &quot;لطفا محکم و قوی رشد کن و جلوی وارد شدن افراد بد را بگیر.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/07.jpg" /></p>
+<p>みんなは「私たちは彼女のことも赤ちゃんも守ろうと決めて手助けをしたけど、彼らは私たちに悪い運をもってくるに違いない」と言い始めました。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +151,9 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
-<p dir="rtl">وقتی کالای از مدرسه به خانه برگشت، درخت پرتقال را دید. کالای پرسید، &quot;آیا پرتقال هایت هنوز نرسیده ؟&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/08.jpg" /></p>
+<p>彼女はまた一人ぼっちになってしまいました。</p>
+<p>彼女はこのかわいそうな赤ちゃんをどうやって育てればいいか、自分はどうするべきなのかがわかりませんでした。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +161,9 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
-<p dir="rtl">کالای آهی کشید وگفت، &quot;پرتقال ها هنوز سبز هستند.&quot; کالای گفت، &quot;فردا تو را خواهم دید درخت پرتقال.&quot; &quot;شاید بعد تویک پرتقال رسیده برای من داشته باشی!&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/09.jpg" /></p>
+<p>しかし、彼女は、ロバが自分の子どもであり、自分はロバの母親であることを受け入れなければなりませんでした。</p>
+<p>その子どもが小さいサイズのままであれば、すべては違っていたでしょう。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,17 +171,133 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" id="کالای-با-گیاهان-صحبت-می-کند-1">کالای با گیاهان صحبت می کند</h2>
-<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Jesse Pietersen<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/10.jpg" /></p>
+<p>しかし、そのうちにその子どもは彼女がおんぶできないくらい大きくなってしまったのです。</p>
+<p>そしてその子はどんなにがんばっても人間と同じ行動ができるようにはなりませんでした。</p>
+<p>母親は疲れ、イライラして、自分の子どもを動物に接するように扱いました。</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/11.jpg" /></p>
+<p>その怒りやストレスはロバの中にどんどんたまっていきました。ロバは人間と同じことはできないし、人間のようにはなれない。</p>
+<p>たまりにたまった怒りから、ついにロバはお母さんを蹴ってしまいました。</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/12.jpg" /></p>
+<p>ロバは自分のしたことに対する恥ずかしい気持ちでいっぱいになり、精一杯の速さでその場から走り去ってしまいました。</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
+<p>そしてあたりはすっかり夜になり、ロバは道に迷ってしまいました。「ヒヒーン」彼は暗闇のなかささやきました。「ヒヒーン」それは後ろにこだましただけでした。</p>
+<p>彼はひとりぼっちでまるくなり、深い、悲しいねむりにつきました。</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/14.jpg" /></p>
+<p>ロバが起きたとき、そこには知らないおじいさんがロバをじっとみつめてたっていました。</p>
+<p>ロバはおじいさんの瞳の中に小さな光をみつけたのです。</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/15.jpg" /></p>
+<p>おじいさんはロバに生き抜くためのたくさんの方法を教えてくれました。</p>
+<p>彼はその教えをよく聞き、学びました。彼らはお互いに助け合い、笑いあって時を過ごしたのです。</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/16.jpg" /></p>
+<p>ある朝、おじいさんはロバにのり、山のてっぺんにつれていくようお願いをしました。</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/17.jpg" /></p>
+<p>彼らは雲の上で眠りに落ち、ロバはお母さんが病気になり、自分のことを呼んでいる夢をみました。</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/18.jpg" /></p>
+<p>ロバが起きたときには、雲も、親愛なるおじいさんも消えてなくなっていました。</p>
+<center>
+<strong>17</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/19.jpg" /></p>
+<p>ロバはついに自分がどうするべきかがわかりました。</p>
+<center>
+<strong>18</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/20.jpg" /></p>
+<p>ロバは、息子を失って悲しみにくれていたお母さんを見つけることができました。</p>
+<p>彼らはお互いに長く見つめあい、そして強く強く喜び、抱きしめあいました。</p>
+<center>
+<strong>19</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/21.jpg" /></p>
+<p>ロバと彼のお母さんは一緒に育つことができ、暮らすことができる方法をたくさん見つけていました。</p>
+<p>ゆっくりではあるけれど、彼らの周りの家族も徐々に彼らのことを受け入れていきました。</p>
+<center>
+<strong>20</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="ロバの子-1">ロバの子</h2>
+<strong>作:</strong> Lindiwe Matshikiza<br> <strong>絵:</strong> Meghan Judge<br> <strong>訳:</strong> Yuka Makari<br> <strong>言語:</strong> 日本語<br>
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/khalai-talks-plants'>here</a>
-<p dir="rtl"><div class="license">
+<p>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/donkey-child'>here</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
