--- a/stories/index.html
+++ b/stories/index.html
@@ -2391,16 +2391,52 @@
       <td><a name="ja0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0110</td>
+      <td><a href="/stories/ja/0110_小さな種：ワンガリ・マータイの物語_slides.html" target="_blank">小さな種：ワンガリ・マータイの物語</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0110"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0127</td>
       <td><a href="/stories/ja/0127_遊びの動作_slides.html" target="_blank">遊びの動作</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ja0127"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0139</td>
+      <td><a href="/stories/ja/0139_体の中のワニ_slides.html" target="_blank">体の中のワニ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0139"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0201</td>
+      <td><a href="/stories/ja/0201_ロバの子_slides.html" target="_blank">ロバの子</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0201"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0253</td>
       <td><a href="/stories/ja/0253_私の絵本_slides.html" target="_blank">私の絵本</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ja0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0291</td>
+      <td><a href="/stories/ja/0291_ブーシーのお姉さんが言ったこと_slides.html" target="_blank">ブーシーのお姉さんが言ったこと</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0291"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0294</td>
+      <td><a href="/stories/ja/0294_おばあちゃんのバナナ_slides.html" target="_blank">おばあちゃんのバナナ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0294"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0329</td>
+      <td><a href="/stories/ja/0329_怠け者のアナンシ_slides.html" target="_blank">怠け者のアナンシ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0329"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -5641,7 +5677,7 @@
       <td>0110</td>
       <td><a href="http://africanstorybook.org/stories/tiny-seed-story-wangari-maathai">A Tiny Seed: The Story of Wangari Maathai</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0110">ar</a>, <a href="#es0110">es</a>, <a href="#fa0110">fa</a>, <a href="#it0110">it</a>, <a href="#ko0110">ko</a>, <a href="#no0110">no</a>, <a href="#pa0110">pa</a>, <a href="#pl0110">pl</a>, <a href="#tl0110">tl</a>, <a href="#tr0110">tr</a>, <a href="#ur0110">ur</a>, <a href="#yue0110">yue</a>, <a href="#zh0110">zh</a></td>
+      <td><a href="#ar0110">ar</a>, <a href="#es0110">es</a>, <a href="#fa0110">fa</a>, <a href="#it0110">it</a>, <a href="#ja0110">ja</a>, <a href="#ko0110">ko</a>, <a href="#no0110">no</a>, <a href="#pa0110">pa</a>, <a href="#pl0110">pl</a>, <a href="#tl0110">tl</a>, <a href="#tr0110">tr</a>, <a href="#ur0110">ur</a>, <a href="#yue0110">yue</a>, <a href="#zh0110">zh</a></td>
     </tr>
     <tr>
       <td>0111</td>
@@ -5714,6 +5750,12 @@
       <td><a href="http://africanstorybook.org/stories/hamisis-lucky-day">Hamisi’s lucky day</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#nl0136">nl</a></td>
+    </tr>
+    <tr>
+      <td>0139</td>
+      <td><a href="http://africanstorybook.org/stories/crocodile-my-body">Crocodile in my body</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#ja0139">ja</a></td>
     </tr>
     <tr>
       <td>0141</td>
@@ -5791,7 +5833,7 @@
       <td>0201</td>
       <td><a href="http://africanstorybook.org/stories/donkey-child">Donkey Child</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0201">ar</a>, <a href="#es0201">es</a>, <a href="#fa0201">fa</a>, <a href="#it0201">it</a>, <a href="#ko0201">ko</a>, <a href="#pa0201">pa</a>, <a href="#pl0201">pl</a>, <a href="#tl0201">tl</a>, <a href="#ur0201">ur</a>, <a href="#yue0201">yue</a>, <a href="#zh0201">zh</a></td>
+      <td><a href="#ar0201">ar</a>, <a href="#es0201">es</a>, <a href="#fa0201">fa</a>, <a href="#it0201">it</a>, <a href="#ja0201">ja</a>, <a href="#ko0201">ko</a>, <a href="#pa0201">pa</a>, <a href="#pl0201">pl</a>, <a href="#tl0201">tl</a>, <a href="#ur0201">ur</a>, <a href="#yue0201">yue</a>, <a href="#zh0201">zh</a></td>
     </tr>
     <tr>
       <td>0204</td>
@@ -5911,7 +5953,7 @@
       <td>0291</td>
       <td><a href="http://africanstorybook.org/stories/what-vusis-sister-said">What Vusi’s sister said</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0291">ar</a>, <a href="#es0291">es</a>, <a href="#fa0291">fa</a>, <a href="#it0291">it</a>, <a href="#ko0291">ko</a>, <a href="#pa0291">pa</a>, <a href="#pl0291">pl</a>, <a href="#tl0291">tl</a>, <a href="#ur0291">ur</a>, <a href="#yue0291">yue</a>, <a href="#zh0291">zh</a></td>
+      <td><a href="#ar0291">ar</a>, <a href="#es0291">es</a>, <a href="#fa0291">fa</a>, <a href="#it0291">it</a>, <a href="#ja0291">ja</a>, <a href="#ko0291">ko</a>, <a href="#pa0291">pa</a>, <a href="#pl0291">pl</a>, <a href="#tl0291">tl</a>, <a href="#ur0291">ur</a>, <a href="#yue0291">yue</a>, <a href="#zh0291">zh</a></td>
     </tr>
     <tr>
       <td>0293</td>
@@ -5923,7 +5965,7 @@
       <td>0294</td>
       <td><a href="http://africanstorybook.org/stories/grandma%E2%80%99s-bananas">Grandma’s bananas</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0294">ar</a>, <a href="#es0294">es</a>, <a href="#fa0294">fa</a>, <a href="#it0294">it</a>, <a href="#ko0294">ko</a>, <a href="#ne0294">ne</a>, <a href="#pa0294">pa</a>, <a href="#pl0294">pl</a>, <a href="#tl0294">tl</a>, <a href="#ur0294">ur</a>, <a href="#yue0294">yue</a>, <a href="#zh0294">zh</a></td>
+      <td><a href="#ar0294">ar</a>, <a href="#es0294">es</a>, <a href="#fa0294">fa</a>, <a href="#it0294">it</a>, <a href="#ja0294">ja</a>, <a href="#ko0294">ko</a>, <a href="#ne0294">ne</a>, <a href="#pa0294">pa</a>, <a href="#pl0294">pl</a>, <a href="#tl0294">tl</a>, <a href="#ur0294">ur</a>, <a href="#yue0294">yue</a>, <a href="#zh0294">zh</a></td>
     </tr>
     <tr>
       <td>0296</td>
@@ -5990,6 +6032,12 @@
       <td><a href="http://africanstorybook.org/stories/counting-animals">Counting animals</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#aeb0327">aeb</a>, <a href="#ar0327">ar</a>, <a href="#de0327">de</a>, <a href="#es0327">es</a>, <a href="#fa0327">fa</a>, <a href="#it0327">it</a>, <a href="#ko0327">ko</a>, <a href="#no0327">no</a>, <a href="#pa0327">pa</a>, <a href="#pl0327">pl</a>, <a href="#tl0327">tl</a>, <a href="#ur0327">ur</a>, <a href="#vi0327">vi</a>, <a href="#yue0327">yue</a>, <a href="#zh0327">zh</a></td>
+    </tr>
+    <tr>
+      <td>0329</td>
+      <td><a href="http://africanstorybook.org/stories/lazy-anansi">Lazy Anansi</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#ja0329">ja</a></td>
     </tr>
     <tr>
       <td>0331</td>
