--- a/stories/ja/0291_ブーシーのお姉さんが言ったこと_slides.html
+++ b/stories/ja/0291_ブーシーのお姉さんが言ったこと_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>کالای با گیاهان صحبت می کند - Global African Storybook</title>
+  <title>ブーシーのお姉さんが言ったこと - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="کالای-با-گیاهان-صحبت-می-کند" class="slide level1">
-<h1 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl">کالای با گیاهان صحبت می کند</h1>
+<section id="ブーシーのお姉さんが言ったこと" class="slide level1">
+<h1>ブーシーのお姉さんが言ったこと</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
-<p dir="rtl">این کالای است. او هفت سال سن دارد. در زبان لوباکوسو که زبان او می باشد معنای اسمش - دختر خوب – است.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/02.jpg" /></p>
+<p>ある日の朝早く、ブーシーのおばあちゃんはブーシーにお遣いを頼みました。「ブーシー、この卵をお父さんとお母さんに届けてくれないかい？二人はこの卵で、お前のお姉ちゃんために大きなケーキを作りたいんだ。」</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
-<p dir="rtl">کالای هر روز صبح که بیدار می شود با درخت پرتقال صحبت می کند. درخت پرتقال لطفا، حسابی رشد کن و به ما پرتقال های رسیده ی خوب بده.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/03.jpg" /></p>
+<p>お父さんとお母さんのところへ行く道の途中、ブーシーは果物狩りをしている二人の少年に出会いました。少年はブーシーから卵を取り上げ、木に向かって投げつけてしまいました。卵は割れてしまいました。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
-<p dir="rtl">کالای تا مدرسه راه می رود. در راه با علف ها صحبت می کند. علف ها، لطفا بیشتر رشد کنید و سبز شوید و خشک نشوید.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/04.jpg" /></p>
+<p>「何てことしてくれるんだ！」と言って、ブーシーは泣き出しました。「これはケーキのための卵なんだ。そのケーキは僕のお姉ちゃんの結婚式のためのものなんだ。ウェディングケーキが無かったら、お姉ちゃん何て言うかなぁ…。」</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
-<p dir="rtl">کالای از کنار گل های وحشی رد می شود. گلهای وحشی لطفا، مرتب شکوفه بزنید که من بتوانم شما را در موهایم قرار دهم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/05.jpg" /></p>
+<p>少年たちはブーシーをからかったことを謝り、「僕たちはケーキを作ることはできないけど、代わりにこのステッキを君のお姉さんにやるよ。」と言い、ステッキを渡しました。ブーシーは再び歩き始めました。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
-<p dir="rtl">در مدرسه، کالای با درختی که در وسط حیاط بود صحبت کرد.&quot; درخت لطفا، شاخه های بزرگ برویان تا ما بتوانیم زیر سایه‌ی تو درس بخوانیم.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/06.jpg" /></p>
+<p>道の途中、ブーシーは家を建てている二人の男に出会いました。男の人はブーシーに「その丈夫そうな木を使ってもいいかな？」と聞きました。しかしそのステッキは家を建てられるほど十分に強くはなく、折れてしまいました。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
-<p dir="rtl">کالای با حصار اطراف مدرسه صحبت می کند. &quot;لطفا محکم و قوی رشد کن و جلوی وارد شدن افراد بد را بگیر.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/07.jpg" /></p>
+<p>「何てことしてくれるんだ！」とブーシーは泣き出しました。「そのステッキはお姉ちゃんへの贈り物なんだ。果物狩りの少年が、ケーキに使う卵を割ったお詫びにくれたんだ。そのケーキはお姉ちゃんのウェディングケーキだったんだ。卵も、ケーキも、それから贈り物も無い。お姉ちゃん何て言うだろう…。」</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
-<p dir="rtl">وقتی کالای از مدرسه به خانه برگشت، درخت پرتقال را دید. کالای پرسید، &quot;آیا پرتقال هایت هنوز نرسیده ؟&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/08.jpg" /></p>
+<p>大工は、「僕らはケーキを作れないけど、代わりにお姉さんにこの藁をあげよう。」と言って、ステッキを折ったことを謝りました。そしてブーシはまた歩き始めました。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
-<p dir="rtl">کالای آهی کشید وگفت، &quot;پرتقال ها هنوز سبز هستند.&quot; کالای گفت، &quot;فردا تو را خواهم دید درخت پرتقال.&quot; &quot;شاید بعد تویک پرتقال رسیده برای من داشته باشی!&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/09.jpg" /></p>
+<p>道の途中、ブーシーは農家おじさんと牛に出会いました。「何て美味しそうな藁なんだ、少しかじっていいかな？」と牛は尋ねました。しかし藁はとてもおいしく、なんと牛は藁を全部たいらげてしまいました。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,17 +168,62 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" id="کالای-با-گیاهان-صحبت-می-کند-1">کالای با گیاهان صحبت می کند</h2>
-<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Jesse Pietersen<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/10.jpg" /></p>
+<p>「何てことしてくれるんだ!」とブーシーは泣き出しました。「あの藁はお姉ちゃんへの贈り物だったんだ。大工が、果物狩りの少年からもらったステッキを折ったお詫びにくれたんだ。果物狩りの少年は、お姉ちゃんへのケーキに使う卵を割ったお詫びにステッキをくれたんだ。そのケーキは、お姉ちゃんの結婚式のためのものだったんだ。そして今、卵も、ケーキも、そして贈り物も無い。お姉ちゃん何て言うかなぁ…。」</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/11.jpg" /></p>
+<p>牛は食いしん坊を謝りました。農家おじさんは、牛がお姉さんへの贈り物としてブーシーに付いて行くことに賛成しました。そしてまたブーシーは歩き始めました。</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/12.jpg" /></p>
+<p>けれど牛は、夕食の時間になると農家おじさんのもとへ帰ってしまいました。そしてブーシーは道に迷ってしまいました。ブーシーがお姉さんのところに着いたのはだいぶ遅かったので、とっくにパーティーは始まっていました。</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/13.jpg" /></p>
+<p>「どうしよう。」ブーシーは泣き出してしまいました。「大工が藁のお詫びにくれた贈り物の牛は逃げちゃった。大工は、果物狩りの少年からもらったステッキを折ったお詫びに藁をくれたんだ。果物狩りは、ケーキに使う卵を割ったお詫びにステッキをくれたんだ。そのケーキは結婚式のためのものだったんだ。今、卵も、ケーキも、それから贈り物も無いよ…。」</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/14.jpg" /></p>
+<p>ブーシーのお姉さんは少しの間考えて、それから言いました。「私の弟、ブーシー。私はほんとに贈り物のことは気にしてないわ。それどころかケーキのことさえ気にしてない！みんなが揃って、私はそれだけで嬉しいわよ。さあ、かっこいい服に着替えて、今日をお祝いしましょう！」そして、ブーシーはそれをしました。</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="ブーシーのお姉さんが言ったこと-1">ブーシーのお姉さんが言ったこと</h2>
+<strong>作:</strong> Nina Orange<br> <strong>絵:</strong> Wiehan de Jager<br> <strong>訳:</strong> Kohei Uesaka<br> <strong>言語:</strong> 日本語<br>
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/khalai-talks-plants'>here</a>
-<p dir="rtl"><div class="license">
+<p>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/what-vusis-sister-said'>here</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
