--- a/stories/ja/0294_おばあちゃんのバナナ_slides.html
+++ b/stories/ja/0294_おばあちゃんのバナナ_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>کالای با گیاهان صحبت می کند - Global African Storybook</title>
+  <title>おばあちゃんのバナナ - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="کالای-با-گیاهان-صحبت-می-کند" class="slide level1">
-<h1 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl">کالای با گیاهان صحبت می کند</h1>
+<section id="おばあちゃんのバナナ" class="slide level1">
+<h1>おばあちゃんのバナナ</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
-<p dir="rtl">این کالای است. او هفت سال سن دارد. در زبان لوباکوسو که زبان او می باشد معنای اسمش - دختر خوب – است.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/02.jpg" /></p>
+<p>おばあちゃんの庭はとても素敵なの。モロコシやキビ、キャッサバなどの野菜がいっぱい。でもね、その中でも特にバナナが最高なのよ。おばあちゃんにはたくさんの孫がいるけれど、私がおばあちゃんの一番のお気に入りだということを私は知っているの。だっておばあちゃんはよく私を家に呼ぶから。そしておばあちゃんは小さな秘密を私に話してくれるのよ。でもね、教えてくれないひとつの秘密があったの。それはどこに熟したバナナがあるかということ。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
-<p dir="rtl">کالای هر روز صبح که بیدار می شود با درخت پرتقال صحبت می کند. درخت پرتقال لطفا، حسابی رشد کن و به ما پرتقال های رسیده ی خوب بده.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/03.jpg" /></p>
+<p>ある日、大きなわらのカゴがおばあさんの家の外の日なたにおいてあるのを見たの。でも「これは何？何に使うの？」と聞いても、「これは私の魔法のカゴよ。」というだけ。カゴの横に何枚かのバナナの葉っぱがあったから、すごく気になって「この葉っぱは何のためのもの？」と聞いたけど、やっぱり「魔法の葉っぱよ。」というだけ。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
-<p dir="rtl">کالای تا مدرسه راه می رود. در راه با علف ها صحبت می کند. علف ها، لطفا بیشتر رشد کنید و سبز شوید و خشک نشوید.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
+<p>おばあちゃんの行動、バナナとバナナの葉っぱ、大きなわらのカゴを見ることはとても楽しかった。しかしおばあちゃんはいつも私にお母さんのところに行く用事を頼むの。「おばあちゃん、用意をして見せて！」そう言っても「言うことを聞きなさい。」と言ってどうしても見せてくれなかった。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
-<p dir="rtl">کالای از کنار گل های وحشی رد می شود. گلهای وحشی لطفا، مرتب شکوفه بزنید که من بتوانم شما را در موهایم قرار دهم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/05.jpg" /></p>
+<p>私がお母さんのところから帰ってきたとき、おばあちゃんはまだ外にすわっていた。でもそこにはかごもバナナもなかったの。「おばあちゃん、かごはどこ？バナナはどこ？それと……」「それらはみんな魔法の場所にあるのよ。」といつものようにいうだけ。私はとてもがっかりした。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
-<p dir="rtl">در مدرسه، کالای با درختی که در وسط حیاط بود صحبت کرد.&quot; درخت لطفا، شاخه های بزرگ برویان تا ما بتوانیم زیر سایه‌ی تو درس بخوانیم.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/06.jpg" /></p>
+<p>二日後、おばあちゃんは「杖を取ってきて」と私に頼んだからおばあちゃんの寝る部屋に行ったの。そしたらね、ドアを開けたとたん、熟したバナナの強い香りがいっぱいに広がったの。そして古い毛布で隠してあるいつもの大きなわらのカゴがあったの。私は毛布をめくり、そのすばらしい香りをくんくん嗅いだわ。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
-<p dir="rtl">کالای با حصار اطراف مدرسه صحبت می کند. &quot;لطفا محکم و قوی رشد کن و جلوی وارد شدن افراد بد را بگیر.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/07.jpg" /></p>
+<p>「何してるの?早く杖を持ってきてちょうだい。」おばあちゃんにそう呼ばれたとき、私はその声にはっとして急いで杖を持っていった。「なんでそんなに笑っているの？」とおばあちゃんに尋ねられたとき、魔法を見つけた嬉しさのあまりまだ自分が笑っていることに気がついたの。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
-<p dir="rtl">وقتی کالای از مدرسه به خانه برگشت، درخت پرتقال را دید. کالای پرسید، &quot;آیا پرتقال هایت هنوز نرسیده ؟&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
+<p>次の日、おばあちゃんがお母さんのところに来たとき、私はおばあちゃんの家に急いで行って、もう一度バナナを確認した。そこには見事に熟したバナナがあった。私は一つを取って、ワンピースの中に隠した。そして、かごに毛布をかけてから、家の裏に行き、急いでバナナを食べた。そのバナナは今まで食べたバナナで一番甘くて美味しかったわ！</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
-<p dir="rtl">کالای آهی کشید وگفت، &quot;پرتقال ها هنوز سبز هستند.&quot; کالای گفت، &quot;فردا تو را خواهم دید درخت پرتقال.&quot; &quot;شاید بعد تویک پرتقال رسیده برای من داشته باشی!&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/09.jpg" /></p>
+<p>次の日、おばあちゃんが庭で野菜を採っている時、私はこっそりとバナナのとこへ行くと、ほとんどが熟していた。私は我慢できずにたくさんのバナナを取ってしまったの。忍び足でドアのほうに歩いていた時、おばあちゃんが外で咳をしたのが聞こえた。私は必死にバナナを服の中に隠して、おばあちゃんに気づかれないようにこっそりそーっとそばを通った。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,17 +168,35 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" id="کالای-با-گیاهان-صحبت-می-کند-1">کالای با گیاهان صحبت می کند</h2>
-<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Jesse Pietersen<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/10.jpg" /></p>
+<p>次の日は市の日だった。おばあちゃんは早起きして、熟れたバナナと野菜を売りに行った。私はその日はおばあちゃんの家に行きたくなかった。でも行かないなんてことはできなかった。</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/11.jpg" /></p>
+<p>その日の夜、お母さんとお父さん、おばあちゃんに呼ばれた。理由はもちろん分かっていた。その夜寝るとき、盗みは絶対してはいけないと思った。おばあさんから、お母さんお父さんから、もちろん誰からも。</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="おばあちゃんのバナナ-1">おばあちゃんのバナナ</h2>
+<strong>作:</strong> Ursula Nafula<br> <strong>絵:</strong> Catherine Groenewald<br> <strong>訳:</strong> Yoshimi Matsui<br> <strong>言語:</strong> 日本語<br>
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/khalai-talks-plants'>here</a>
-<p dir="rtl"><div class="license">
+<p>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/grandma%E2%80%99s-bananas'>here</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
