--- a/stories/ja/0329_怠け者のアナンシ_slides.html
+++ b/stories/ja/0329_怠け者のアナンシ_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>کالای با گیاهان صحبت می کند - Global African Storybook</title>
+  <title>怠け者のアナンシ - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="کالای-با-گیاهان-صحبت-می-کند" class="slide level1">
-<h1 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl">کالای با گیاهان صحبت می کند</h1>
+<section id="怠け者のアナンシ" class="slide level1">
+<h1>怠け者のアナンシ</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0329/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
-<p dir="rtl">این کالای است. او هفت سال سن دارد. در زبان لوباکوسو که زبان او می باشد معنای اسمش - دختر خوب – است.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0329/02.jpg" /></p>
+<p>アナンシというクモがいました。アナンシはとても怠け者で、自分のご飯を自分で作りません。そのかわりに、アナンシは友達が作ったおいしいご飯を食べに友達のところに行きます。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
-<p dir="rtl">کالای هر روز صبح که بیدار می شود با درخت پرتقال صحبت می کند. درخت پرتقال لطفا، حسابی رشد کن و به ما پرتقال های رسیده ی خوب بده.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0329/03.jpg" /></p>
+<p>ある日、うさぎさんの家の前をアナンシがとおったとき、野菜を作るにおいがしてきました。アナンシはとてもワクワクしていました。うさぎさんはアナンシに言いました。「まだ野菜の準備ができてないんだ。待っているあいだに、洗いものを手伝ってくれない？」アナンシは「ごめんね、やることがあるんだ。またくるよ。」と答えました。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
-<p dir="rtl">کالای تا مدرسه راه می رود. در راه با علف ها صحبت می کند. علف ها، لطفا بیشتر رشد کنید و سبز شوید و خشک نشوید.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0329/04.jpg" /></p>
+<p>すると、うさぎさんが「野菜ができたら呼ぼうか？」とアナンシに聞きました。そこでアナンシは少し考え、こういいました。「クモの糸を使うよ。クモの糸の片方をぼくの足にむすんで、もう片方をきみのおなべにむすぶんだ。野菜ができたら、糸をひっぱってぼくに知らせて。そうしたらすぐにくるからさ」。そしてアナンシはクモの糸をおなべにくくりつけ、歩いていきました。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
-<p dir="rtl">کالای از کنار گل های وحشی رد می شود. گلهای وحشی لطفا، مرتب شکوفه بزنید که من بتوانم شما را در موهایم قرار دهم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0329/05.jpg" /></p>
+<p>つぎに、アナンシは豆を煮ていたおさるさんたちに会いました。「もうすぐ豆ができるんだ。一緒に食べようよ！」とおさるさんは言いました。アナンシは「ごめんね、やることがあるんだ。クモの糸の片方をぼくの足に、もう片方をきみたちのおなべにむすんでもいいかい？豆ができたら、糸をひっぱってぼくに知らせてよ。そうしたらくるからさ」。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
-<p dir="rtl">در مدرسه، کالای با درختی که در وسط حیاط بود صحبت کرد.&quot; درخت لطفا، شاخه های بزرگ برویان تا ما بتوانیم زیر سایه‌ی تو درس بخوانیم.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0329/06.jpg" /></p>
+<p>アナンシがイボイノシシさんの家のそばを通りかかったとき、サツマイモのいいにおいがしてきました。イボイノシシさんはアナンシに言いました。「たくさんのサツマイモと蜂蜜を作ったから、一緒に食べようよ。このフォークでかきまぜるのを手伝ってくれない？」。アナンシは答えました。「あとでもどってくるよ。クモの糸の片方をぼくの足に、もう片方をきみのおなべにむすんでもいいかい？サツマイモができたら、糸をひっぱってぼくに知らせてよ。そうしたらくるからさ」。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
-<p dir="rtl">کالای با حصار اطراف مدرسه صحبت می کند. &quot;لطفا محکم و قوی رشد کن و جلوی وارد شدن افراد بد را بگیر.&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0329/07.jpg" /></p>
+<p>アナンシが川につくころには、８本ある足にはそれぞれおいしい食べものがくくりつけられていました。そして、アナンシは１本の足がひっぱられるのを感じました。「うさぎさんのご飯ができたんだ！」と思い、よだれがでてきそうです。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
-<p dir="rtl">وقتی کالای از مدرسه به خانه برگشت، درخت پرتقال را دید. کالای پرسید، &quot;آیا پرتقال هایت هنوز نرسیده ؟&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0329/08.jpg" /></p>
+<p>アナンシの２本目の足も引っぱられました。すると、３本目、４本目、５本目、６本目、７本目、８本目とひっぱられます。みんなが同時にクモの糸をひっぱっているのです！アナンシの足がのびて細く細くなっていくので、かれは「やめて！やめて！」といたくて泣いてしまいました。でも、アナンシの声はだれにも聞こえません。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
-<p dir="rtl">کالای آهی کشید وگفت، &quot;پرتقال ها هنوز سبز هستند.&quot; کالای گفت، &quot;فردا تو را خواهم دید درخت پرتقال.&quot; &quot;شاید بعد تویک پرتقال رسیده برای من داشته باشی!&quot;</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0329/09.jpg" /></p>
+<p>ついには、それぞれのクモの糸はきれてしまいました。アナンシはいたみをなくすために、足を川の中にいれましたが、かれの足の形はかわってしまい、もとの足にはもどりませんでした。アナンシはとてもはずかしくなって、その日はどの友達にも会いにいくことができなくなってしまいました。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,17 +168,17 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" id="کالای-با-گیاهان-صحبت-می-کند-1">کالای با گیاهان صحبت می کند</h2>
-<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Jesse Pietersen<br> <strong>Translation:</strong> Marzieh Mohammadian Haghighi<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
+<h2 id="怠け者のアナンシ-1">怠け者のアナンシ</h2>
+<strong>作:</strong> Ghanaian folktale<br> <strong>絵:</strong> Wiehan de Jager<br> <strong>訳:</strong> Kii Takahashi<br> <strong>言語:</strong> 日本語<br>
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/khalai-talks-plants'>here</a>
-<p dir="rtl"><div class="license">
+<p>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/lazy-anansi'>here</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
