--- a/stories/fa/0089_کالای-با-گیاهان-صحبت-می-کند.html
+++ b/stories/fa/0089_کالای-با-گیاهان-صحبت-می-کند.html
@@ -43,7 +43,7 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/01.jpg" />
 
-<h1 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" id="section">کالای با گیاهان صحبت می کند</h1>
+<h1 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" id="section">کالای با گیاهان صحبت می کند</h1>
 
 Ursula Nafula<br>فارسی</div><div class="pagebreak">
 
