--- a/stories/index.html
+++ b/stories/index.html
@@ -2895,6 +2895,12 @@
       <td><a name="no0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0089</td>
+      <td><a href="/stories/no/0089_khalai-snakker-med-plantene_slides.html" target="_blank">Khalai snakker med plantene</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="no0089"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0095</td>
       <td><a href="/stories/no/0095_zama-er-flink_slides.html" target="_blank">Zama er flink!</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3049,6 +3055,12 @@
       <td><a href="/stories/no/0315_sakimas-sang_slides.html" target="_blank">Sakimas sang</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="no0315"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0324</td>
+      <td><a href="/stories/no/0324_den-dagen-jeg-dro-hjemmefra-for-å-dra-til-byen_slides.html" target="_blank">Den dagen jeg dro hjemmefra for å dra til byen</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="no0324"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0327</td>
@@ -5689,7 +5701,7 @@
       <td>0089</td>
       <td><a href="http://africanstorybook.org/stories/khalai-talks-plants">Khalai talks to plants</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0089">ar</a>, <a href="#de0089">de</a>, <a href="#es0089">es</a>, <a href="#fa0089">fa</a>, <a href="#it0089">it</a>, <a href="#ko0089">ko</a>, <a href="#pa0089">pa</a>, <a href="#pl0089">pl</a>, <a href="#tl0089">tl</a>, <a href="#ur0089">ur</a>, <a href="#yue0089">yue</a>, <a href="#zh0089">zh</a></td>
+      <td><a href="#ar0089">ar</a>, <a href="#de0089">de</a>, <a href="#es0089">es</a>, <a href="#fa0089">fa</a>, <a href="#it0089">it</a>, <a href="#ko0089">ko</a>, <a href="#no0089">no</a>, <a href="#pa0089">pa</a>, <a href="#pl0089">pl</a>, <a href="#tl0089">tl</a>, <a href="#ur0089">ur</a>, <a href="#yue0089">yue</a>, <a href="#zh0089">zh</a></td>
     </tr>
     <tr>
       <td>0090</td>
@@ -6073,7 +6085,7 @@
       <td>0324</td>
       <td><a href="http://africanstorybook.org/stories/day-i-left-home-city">The day I left home for the city</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0324">ar</a>, <a href="#es0324">es</a>, <a href="#fa0324">fa</a>, <a href="#it0324">it</a>, <a href="#ja0324">ja</a>, <a href="#ko0324">ko</a>, <a href="#pa0324">pa</a>, <a href="#pl0324">pl</a>, <a href="#tl0324">tl</a>, <a href="#ur0324">ur</a>, <a href="#vi0324">vi</a>, <a href="#yue0324">yue</a>, <a href="#zh0324">zh</a></td>
+      <td><a href="#ar0324">ar</a>, <a href="#es0324">es</a>, <a href="#fa0324">fa</a>, <a href="#it0324">it</a>, <a href="#ja0324">ja</a>, <a href="#ko0324">ko</a>, <a href="#no0324">no</a>, <a href="#pa0324">pa</a>, <a href="#pl0324">pl</a>, <a href="#tl0324">tl</a>, <a href="#ur0324">ur</a>, <a href="#vi0324">vi</a>, <a href="#yue0324">yue</a>, <a href="#zh0324">zh</a></td>
     </tr>
     <tr>
       <td>0327</td>
