--- a/stories/index.html
+++ b/stories/index.html
@@ -2853,6 +2853,12 @@
       <td><a name="no0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0027</td>
+      <td><a href="/stories/no/0027_avgjørelse_slides.html" target="_blank">Avgjørelse</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="no0027"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0030</td>
       <td><a href="/stories/no/0030_følelser_slides.html" target="_blank">Følelser</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -5599,7 +5605,7 @@
       <td>0027</td>
       <td><a href="http://africanstorybook.org/stories/decision">Decision</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0027">ar</a>, <a href="#de0027">de</a>, <a href="#es0027">es</a>, <a href="#fa0027">fa</a>, <a href="#it0027">it</a>, <a href="#ko0027">ko</a>, <a href="#pa0027">pa</a>, <a href="#pl0027">pl</a>, <a href="#ru0027">ru</a>, <a href="#tl0027">tl</a>, <a href="#tr0027">tr</a>, <a href="#ur0027">ur</a>, <a href="#vi0027">vi</a>, <a href="#yue0027">yue</a>, <a href="#zh0027">zh</a></td>
+      <td><a href="#ar0027">ar</a>, <a href="#de0027">de</a>, <a href="#es0027">es</a>, <a href="#fa0027">fa</a>, <a href="#it0027">it</a>, <a href="#ko0027">ko</a>, <a href="#no0027">no</a>, <a href="#pa0027">pa</a>, <a href="#pl0027">pl</a>, <a href="#ru0027">ru</a>, <a href="#tl0027">tl</a>, <a href="#tr0027">tr</a>, <a href="#ur0027">ur</a>, <a href="#vi0027">vi</a>, <a href="#yue0027">yue</a>, <a href="#zh0027">zh</a></td>
     </tr>
     <tr>
       <td>0030</td>
